--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,11 @@
 {
-	"id": "sample-plugin",
-	"name": "Sample Plugin",
-	"version": "1.0.0",
+	"id": "write-mode-plugin",
+	"name": "write mode plugin",
+	"version": "0.0.1",
 	"minAppVersion": "0.15.0",
-	"description": "Demonstrates some of the capabilities of the Obsidian API.",
-	"author": "Obsidian",
-	"authorUrl": "https://obsidian.md",
-	"fundingUrl": "https://obsidian.md/pricing",
-	"isDesktopOnly": false
+	"description": "Make it visually compelling to write.",
+	"author": "Aaron Addleman",
+	"authorUrl": "https://notes.addleman.cc",
+	"fundingUrl": "https://notes.addleman.cc",
+	"isDesktopOnly": true
 }
